fix margins smallermain css to align with heading on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,11 +63,11 @@ p {
 .smallermain {
 font-size: 80%;
 display: block;
-margin-top: 1em;
+margin-top: 0;
 text-align: left;
-margin-bottom: 1em;
-margin-left: 1em;
-margin-right: 1em;
+margin-bottom: 0;
+margin-left: 0;
+margin-right: 0;
 }
 
 /* Column row container */
